# crwlr-server

./: .dockerignore  .env.example  .gitignore  CLOUD_RUN_SQL_SETUP.md  Dockerfile  Dockerfile.emergency  NO_PROXY_README.md  README.md  check_tables.py  check_unsplash_policies.py  cloudbuild.yaml  debug_api.py  deploy-cloud-run.sh  deploy-emergency.sh  deploy-github.sh  deploy-no-proxy.sh  deploy.sh  deploy_to_cloud_run.sh  docker-compose.yml  init-letsencrypt.sh  init_db.sh  make-executable.sh  pyproject.toml  render.yaml  requirements.txt  run.py  scroll_to_bottom.py  set_api_key.sh  setup-cloud-build-permissions.sh  setup-cloud-build.sh  setup_conda_env.sh  test_api.py  test_api.sh  test_db_connection.py  test_fix.py  test_multi_sites.py  test_policy_detector.py  test_tos.py  test_tos_api.py  test_unsplash.py
.github/workflows/: ci_cd.yml  deploy-to-cloud-run.yml  render-deploy.yml
app/: main.py
app/cli/: init_db_command.py
app/core/: __init__.py  algolia.py  auth.py  config.py  database.py  env_checker.py  firebase.py  init_db.py  typesense.py
app/crud/: __init__.py  base.py  document.py  firebase_base.py  stats.py  submission.py  user.py
app/models/: __init__.py  algolia.py  crawl.py  (+9 more)
docs/: company_info_api.md  privacy_detection.md
emergency/: run.py
nginx/: default.conf
scripts/: README.md  alter_raw_text_column.py  clean_raw_text.sh  clear_database.py  crawl_ebay_tos.py  remove_raw_text.py  sync_to_algolia.py
tests/: test_company_info.py  test_crawl.py  test_dummy.py  test_extract.py  test_privacy_api.py  test_tos_api.py  test_tos_detection.py
(+18 files in other folders)
